article1_k8s/backend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dlacofbs/article1_spring:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          args:
            - "/usr/local/bin/dockerize"
            - "-wait"
            - "tcp://mariadb:3306"     # 환경 변수로 포트 사용
            - "-timeout"
            - "30s"                  # ConfigMap에서 가져온 timeout 값 사용
            - "java"
            - "-jar"
            - "app.jar"
