article1_k8s/frontend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: dlacofbs/article1_vue:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
  strategy:
    type: RollingUpdate  # 롤링 업데이트 전략 사용
    rollingUpdate:
      maxUnavailable: 1  # 동시에 종료되는 파드 수를 1로 제한 (새로운 파드가 준비되기 전까지 하나의 파드만 종료)
      maxSurge: 1        # 동시에 생성될 수 있는 파드 수를 1로 설정 (새로운 파드가 생성될 때 한 개의 파드만 추가로 생성)
