article1_k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: session-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: session-redis
