article1_k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # SSL 리디렉션 비활성화
    nginx.ingress.kubernetes.io/rewrite-target: /$2   # URL 경로 재작성
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /()(.*)  # 기본 경로를 /로 시작하는 모든 요청 처리
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
